// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question Editor Node Question builds the expected component (not in assessment) 1`] = `
<div>
  <div
    className="component obojobo-draft--chunks--question is-viewed pad is-type-default"
  >
    <div
      className="flipper question-editor"
    >
      <div
        className="content-back"
      >
        <div
          className="question-settings"
          contentEditable={false}
        >
          <label>
            Question Type
          </label>
          <select
            contentEditable={false}
            onChange={[Function]}
          >
            <option
              value="ObojoboDraft.Chunks.MCAssessment"
            >
              Multiple choice
            </option>
            <option
              value="ObojoboDraft.Chunks.NumericAssessment"
            >
              Input a number
            </option>
            <option
              value="ObojoboDraft.Chunks.Materia"
            >
              Materia widget
            </option>
          </select>
          <label
            className="question-type"
            contentEditable={false}
          >
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
            />
            Survey Only
          </label>
        </div>
      </div>
    </div>
    <button
      className="delete-button"
      contentEditable={false}
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;

exports[`Question Editor Node Question builds the expected component 1`] = `
<div>
  <div
    className="component obojobo-draft--chunks--question is-viewed pad is-type-default"
  >
    <div
      className="flipper question-editor"
    >
      <div
        className="content-back"
      >
        <div
          className="question-settings"
          contentEditable={false}
        >
          <label>
            Question Type
          </label>
          <select
            contentEditable={false}
            onChange={[Function]}
          >
            <option
              value="ObojoboDraft.Chunks.MCAssessment"
            >
              Multiple choice
            </option>
            <option
              value="ObojoboDraft.Chunks.NumericAssessment"
            >
              Input a number
            </option>
            <option
              value="ObojoboDraft.Chunks.Materia"
            >
              Materia widget
            </option>
          </select>
          <label
            className="question-type"
            contentEditable={false}
          >
            <input
              checked={false}
              onChange={[Function]}
              type="checkbox"
            />
            Survey Only
          </label>
        </div>
      </div>
    </div>
    <button
      className="delete-button"
      contentEditable={false}
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;

exports[`Question Editor Node Question component adds Solution 1`] = `"<div><div class=\\"component obojobo-draft--chunks--question is-viewed pad is-type-default\\"><div class=\\"flipper question-editor\\"><div class=\\"content-back\\"><div class=\\"question-settings\\" contenteditable=\\"false\\"><label>Question Type</label><select contenteditable=\\"false\\"><option value=\\"ObojoboDraft.Chunks.MCAssessment\\">Multiple choice</option><option value=\\"ObojoboDraft.Chunks.NumericAssessment\\">Input a number</option><option value=\\"ObojoboDraft.Chunks.Materia\\">Materia widget</option></select><label class=\\"question-type\\" contenteditable=\\"false\\"><input type=\\"checkbox\\">Survey Only</label></div><div class=\\"add-solution-container\\" contenteditable=\\"false\\"><button class=\\"add-solution\\">Add Explanation</button></div></div></div><button class=\\"delete-button\\" contenteditable=\\"false\\">×</button></div></div>"`;

exports[`Question Editor Node Survey Question builds the expected component 1`] = `
<div>
  <div
    className="component obojobo-draft--chunks--question is-viewed pad is-type-survey"
  >
    <div
      className="flipper question-editor"
    >
      <div
        className="content-back"
      >
        <div
          className="question-settings"
          contentEditable={false}
        >
          <label>
            Question Type
          </label>
          <select
            contentEditable={false}
            onChange={[Function]}
          >
            <option
              value="ObojoboDraft.Chunks.MCAssessment"
            >
              Multiple choice
            </option>
            <option
              value="ObojoboDraft.Chunks.NumericAssessment"
            >
              Input a number
            </option>
            <option
              value="ObojoboDraft.Chunks.Materia"
            >
              Materia widget
            </option>
          </select>
          <label
            className="question-type"
            contentEditable={false}
          >
            <input
              checked={true}
              onChange={[Function]}
              type="checkbox"
            />
            Survey Only
          </label>
        </div>
        <div
          className="add-solution-container"
          contentEditable={false}
        >
          <button
            className="add-solution"
            onClick={[Function]}
          >
            Add Explanation
          </button>
        </div>
      </div>
    </div>
    <button
      className="delete-button"
      contentEditable={false}
      onClick={[Function]}
    >
      ×
    </button>
  </div>
</div>
`;
